--- a/.github/workflows/docker-alpine-64bit-multi-arch.yaml
+++ b/.github/workflows/docker-alpine-64bit-multi-arch.yaml
@@ -25,9 +25,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install requirements
-      run : |
-        sudo apt remove -y containerd
-        sudo apt install -y --no-install-recommends docker.io autoconf automake libtool
+      run : sudo apt install -y --no-install-recommends docker autoconf automake libtool
 
     - name: check kernel
       run: |
@@ -37,6 +35,7 @@ jobs:
 
     - name: Run in Docker
       run: |
+        autoreconf -fi
         docker run \
           -v $(pwd):/${{ github.workspace }} \
           -w ${{ github.workspace }} \
@@ -45,4 +44,4 @@ jobs:
           --rm \
           ${{ matrix.DOCKER_ARCH_ARGS}} \
           /bin/sh \
-          -c "./misc/docker-gha-fixup.sh && autoreconf -fi && ./configure --enable-asm=${{ matrix.ASM }} && make alpine-multi-arch"
+          -c "./misc/docker-gha-fixup.sh && ./configure --enable-asm=${{ matrix.ASM }} && make alpine-multi-arch"
