--- a/.github/workflows/windows-fiat-c-library-test.yaml
+++ b/.github/workflows/windows-fiat-c-library-test.yaml
@@ -34,4 +34,4 @@ jobs:
 
     - name: compile and test-quick
       shell: bash
-      run: autoreconf -fi && ./configure && make test-quick
+      run: misc/autogen.sh && ./configure && make test-quick
