--- a/.github/workflows/windows-msys-64bit-clang-msvcrt-python-pip-test.yaml
+++ b/.github/workflows/windows-msys-64bit-clang-msvcrt-python-pip-test.yaml
@@ -49,7 +49,7 @@ jobs:
     - name: Build and install C library
       shell: msys2 {0}
       run: |
-        autoreconf -fi
+        misc/autogen.sh
         ./configure --prefix="${HOME}/inst" CC=${{ matrix.CC }}
         make install
         echo "LD_LIBRARY_PATH=${HOME}/inst/lib" >> $GITHUB_ENV
