--- a/.github/workflows/docker-alpine-64bit-multi-arch.yaml
+++ b/.github/workflows/docker-alpine-64bit-multi-arch.yaml
@@ -24,9 +24,8 @@ jobs:
     - name: checkout
       uses: actions/checkout@v4
 
-    - name: Install requirements
-      run : |
-        sudo apt install -y --no-install-recommends docker
+   #- name: Install requirements
+   #  run : sudo apt update && sudo apt install -y --no-install-recommends docker.io autoconf automake libtool
 
     - name: check kernel
       run: |
