--- a/.github/workflows/docker-alpine-64bit-multi-arch.yaml
+++ b/.github/workflows/docker-alpine-64bit-multi-arch.yaml
@@ -25,8 +25,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install requirements
-      run : |
-        sudo apt install -y --no-install-recommends docker
+      run : sudo apt install -y --no-install-recommends docker.io autoconf automake libtool
 
     - name: check kernel
       run: |
