--- a/.github/workflows/docker-alma.yaml
+++ b/.github/workflows/docker-alma.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         CC: ["clang", "gcc"]
-        ASM: ["yes", "no"]
+        ASM: ["asm=yes", "asm=no"]
         CONTAINER: ["almalinux:latest"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
@@ -24,7 +24,7 @@ jobs:
     - name: Build C library
       run: |
         autoreconf -fi
-        ./configure --prefix=/usr/local --enable-shared --enable-asm=${{ matrix.ASM }} CC=${{ matrix.CC }} CFLAGS="-fno-lto"
+        ./configure --prefix=/usr/local --disable-silent-rules --enable-shared --enable-${{ matrix.ASM }} CC=${{ matrix.CC }} CFLAGS="-fno-lto"
         make
 
     - name: Test install
