--- a/.github/workflows/docker-ubuntu-asan.yaml
+++ b/.github/workflows/docker-ubuntu-asan.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ASM: ["yes", "no"]
+        ASM: ["asm=yes", "asm=no"]
         CONTAINER: ["ubuntu:23.10", "ubuntu:24.04"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
@@ -31,7 +31,7 @@ jobs:
         CFLAGS: -fsanitize=address -fno-omit-frame-pointer -g3 -fno-lto
       run: |
         autoreconf -fi
-        ./configure --prefix="${HOME}/inst" --disable-shared --enable-static --enable-asm=${{ matrix.ASM }} && make install
+        ./configure --prefix="${HOME}/inst" --disable-silent-rules --disable-shared --enable-static --enable-${{ matrix.ASM }} && make install
 
     - name: Show go env
       run: go env
