--- a/.github/workflows/freebsd-fiat-test-non-gnu-make.yaml
+++ b/.github/workflows/freebsd-fiat-test-non-gnu-make.yaml
@@ -29,5 +29,5 @@ jobs:
 
         run: |
           autoreconf -fi
-          ./configure
+          ./configure --disable-silent-rules
           make
