--- a/.github/workflows/freebsd-fiat-test.yaml
+++ b/.github/workflows/freebsd-fiat-test.yaml
@@ -30,5 +30,5 @@ jobs:
 
         run: |
           autoreconf -fi
-          ./configure
+          ./configure --disable-silent-rules
           make test-quick
