--- a/.github/workflows/macos-fiat-test.yaml
+++ b/.github/workflows/macos-fiat-test.yaml
@@ -34,4 +34,4 @@ jobs:
         make -v
 
     - name: compile and test-quick
-      run: autoreconf -fi && ./configure CC=${{ matrix.CC }} && make test-quick
+      run: autoreconf -fi && ./configure --disable-silent-rules CC=${{ matrix.CC }} && make test-quick
