--- a/.github/workflows/macos-golang-test.yaml
+++ b/.github/workflows/macos-golang-test.yaml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Build and install C library
         shell: bash
-        run: autoreconf -fi && ./configure --prefix="${HOME}/inst" --disable-shared --enable-static && make install
+        run: autoreconf -fi && ./configure --prefix="${HOME}/inst" --disable-silent-rules --disable-shared --enable-static && make install
 
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
