--- a/.github/workflows/ubuntu-golang-cross-compile-test.yaml
+++ b/.github/workflows/ubuntu-golang-cross-compile-test.yaml
@@ -21,7 +21,7 @@ jobs:
       run: |
         sudo apt install -y --no-install-recommends autoconf automake libtool pkg-config
         autoreconf -fi
-        ./configure --prefix="${HOME}/inst"
+        ./configure --prefix="${HOME}/inst" --disable-silent-rules
         make install
         echo "PKG_CONFIG_PATH=${HOME}/inst/lib/pkgconfig" >> $GITHUB_ENV
 
