--- a/.github/workflows/docker-alpine-64bit-multi-arch.yaml
+++ b/.github/workflows/docker-alpine-64bit-multi-arch.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 jobs:
   multiarch:
-    runs-on: ubuntu-latest
+    runs-on: ["ubuntu:24.10"]
     strategy:
       matrix:
         CC: ["clang"]
