--- a/.github/workflows/omnios-fiat-test.yaml
+++ b/.github/workflows/omnios-fiat-test.yaml
@@ -29,4 +29,4 @@ jobs:
         run: |
           autoreconf -fi
           ./configure --disable-silent-rules
-          make test-quick
+          make test-quick || cat Makefile
