--- a/.github/workflows/docker-debian.yaml
+++ b/.github/workflows/docker-debian.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         CC: ["clang", "gcc"]
-        ASM: [asm=yes, asm=no]
+        ASM: [asm=no, asm=yes]
         CONTAINER: ["debian:12-slim", "debian:unstable-slim"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
