--- a/.github/workflows/docker-fedora.yaml
+++ b/.github/workflows/docker-fedora.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         CC: ["clang", "gcc"]
-        ASM: [asm=yes, asm=no]
+        ASM: [asm=no, asm=yes]
         CONTAINER: ["fedora:41", "fedora:40", "fedora:39", "fedora:38"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
