--- a/.github/workflows/ubuntu-deb-clang-gcc-pytest.yaml
+++ b/.github/workflows/ubuntu-deb-clang-gcc-pytest.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         CC: ["clang", "gcc"]
-        ASM: ["asm=yes", "asm=no"]
+        ASM: ["asm=no", "asm=yes"]
     steps:
     - uses: actions/checkout@v4
 
