--- a/.github/workflows/docker-ubuntu-asan.yaml
+++ b/.github/workflows/docker-ubuntu-asan.yaml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   docker:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         ASM: ["asm=yes", "asm=no"]
