--- a/.github/workflows/freebsd-fiat-test-non-gnu-make.yaml
+++ b/.github/workflows/freebsd-fiat-test-non-gnu-make.yaml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     name: FreeBSD clang build of fiat backend (non-GNU make)
     env:
       LANG: "C"
