--- a/.github/workflows/netbsd-fiat-test.yaml
+++ b/.github/workflows/netbsd-fiat-test.yaml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     name: NetBSD gcc build of fiat backend
     env:
       LANG: "C"
