--- a/.github/workflows/solaris-i86pc-test.yaml
+++ b/.github/workflows/solaris-i86pc-test.yaml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         ASM: [asm=yes, asm=no]
