--- a/.github/workflows/docker-alpine-msan.yaml
+++ b/.github/workflows/docker-alpine-msan.yaml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install alpine deps
-      run: ./misc/install-alpine-deps.sh
+      run: ./misc/install-deps.sh alpine
 
     - name: Build and install library
       env:
