--- a/.github/workflows/ubuntu-cross-compile-test.yaml
+++ b/.github/workflows/ubuntu-cross-compile-test.yaml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install cross compiler deps
-      run: sudo ./misc/install-ubuntu-latest-cross-deps.sh
+      run: misc/install-deps.sh x-ubuntu-24.04-cross
 
     - name: Display compiler version
       run: ${{ matrix.CC }} -v
