--- a/.github/workflows/ubuntu-deb-clang-gcc-pytest.yaml
+++ b/.github/workflows/ubuntu-deb-clang-gcc-pytest.yaml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Python deps for testing
-      run: sudo bash -c ./misc/install-debian-deps.sh
+      run: misc/install-deps.sh debian --python
 
     - name: Build and install C library
       run: |
