--- a/.github/workflows/ubuntu-webassembly.yaml
+++ b/.github/workflows/ubuntu-webassembly.yaml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install cross compiler deps
-      run: sudo ./misc/install-ubuntu-webassembly-deps.sh
+      run: misc/install-deps.sh x-ubuntu-22.04-webassembly
 
     - name: Display compiler version
       run: emcc -v
