--- a/.github/workflows/omnios-fiat-test.yaml
+++ b/.github/workflows/omnios-fiat-test.yaml
@@ -11,6 +11,13 @@ jobs:
       CC: "gcc"
     steps:
     - uses: actions/checkout@v4
+
+    - name: Install dependencies
+      run: misc/install-deps.sh ubuntu
+
+    - name: Run autoreconf
+      run: autoreconf -fi
+
     - name: Build and test in Omnios
       id: test
       uses: vmactions/omnios-vm@v1
@@ -22,11 +29,6 @@ jobs:
           uname -a
           psrinfo -vp
           cat /etc/release
-          pkg install developer/object-file developer/linker system/header system/library/math shell/bash developer/gcc12
-          pkg install developer/build/autoconf developer/build/automake developer/build/libtool
+          pkg install developer/object-file developer/linker system/header system/library/math developer/gcc12
           gcc -v
-
-        run: |
-          autoreconf -fi
-          ./configure --disable-silent-rules
-          make test-quick
+        run: ./configure --disable-silent-rules && make test-quick
