--- a/.github/workflows/solaris-i86pc-test.yaml
+++ b/.github/workflows/solaris-i86pc-test.yaml
@@ -13,6 +13,13 @@ jobs:
       CC: "gcc"
     steps:
     - uses: actions/checkout@v4
+
+    - name: Install dependencies
+      run: misc/install-deps.sh ubuntu
+
+    - name: Run autoreconf
+      run: autoreconf -fi
+
     - name: Build and test in Solaris
       id: test
       uses: vmactions/solaris-vm@v1
@@ -24,11 +31,4 @@ jobs:
           uname -a
           isainfo -v
           pkgutil -U
-          pkg install autoconf
-          pkg install automake
-          pkg install libtool
-
-        run: |
-          autoreconf -fi
-          ./configure --disable-silent-rules --enable-${{ matrix.ASM }}
-          make test-quick
+        run: ./configure --disable-silent-rules --enable-${{ matrix.ASM }} && make test-quick
