CI: docker-linux.yaml: pin versions
almalinux:10-kitten-20250204
amazonlinux:2023.6.20250203.1
archlinux:base-20250209.0.306557
clearlinux:base
devuan/devuan:daedalus-2024-11-28

--- a/.github/workflows/docker-linux.yaml
+++ b/.github/workflows/docker-linux.yaml
@@ -11,20 +11,20 @@ jobs:
     strategy:
       matrix:
         CONTAINER: [
-          "almalinux:latest",
+          "almalinux:9.5-20241118",
           "alpine:3.17",
           "alpine:3.17.7",
           "alpine:3.18",
           "alpine:3.18.6",
           "alpine:3.19",
           "alpine:3.19.1",
-          "amazonlinux:latest",
-          "archlinux:latest",
-          "clearlinux:latest",
+          "amazonlinux:2023.6.20250203.1",
+          "archlinux:base-20250209.0.306557",
+          "clearlinux:base",
           "debian:12-slim",
           "debian:unstable-slim",
           "debian:testing-slim",
-          "devuan/devuan:latest",
+          "devuan/devuan:daedalus-2024-11-28",
           "fedora:38",
           "fedora:39",
           "fedora:40",
