--- a/.github/workflows/ubuntu-golang-cross-compile-test.yaml
+++ b/.github/workflows/ubuntu-golang-cross-compile-test.yaml
@@ -10,9 +10,33 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        CC: ["clang"]
-        ARCH: ["amd64", "arm32v5", "arm32v6", "arm32v7", "i386", "arm64", "mips64", "mips64le", "mips", "mipsle", "ppc64", "ppc64le", "riscv64", "s390x"]
-        go-version: [ '1.19', '1.20', '1.21.x' ]
+        ARCH: [
+          amd64,
+          amd64v3,
+          arm32v5,
+          arm32v6,
+          arm32v7,
+          arm64,
+          i386,
+          mips64,
+          mips64le,
+          mips,
+          mipsle,
+          ppc64,
+          ppc64le,
+          riscv64,
+          s390x,
+        ]
+        go-version: ["1.19", "1.20", "1.21.x", "1.22"]
+        include:
+          - go-version: "1.22"
+            ARCH: arm32v5,hardfloat
+          - go-version: "1.22"
+            ARCH: arm32v6,softfloat
+          - go-version: "1.22"
+            ARCH: arm32v7,softfloat
+#          - go-version: "1.23"
+#            ARCH: arm64v9
       fail-fast: false
     steps:
     - uses: actions/checkout@v4
