--- a/.github/workflows/ubuntu-cross-compile.yaml
+++ b/.github/workflows/ubuntu-cross-compile.yaml
@@ -11,14 +11,35 @@ jobs:
     strategy:
       matrix:
         CC: ["clang", "gcc"]
-        ARCH: ["amd64", "arm32v5", "arm32v6", "arm32v7", "i386", "arm64", "mips64", "mips64le", "mips", "mipsle", "ppc64", "ppc64le", "riscv64", "s390x"]
+        ARCH: [
+          amd64,
+          amd64v3,
+          arm32v5,
+          arm32v6,
+          arm32v7,
+          arm64,
+          i386,
+          mips64,
+          mips64le,
+          mips,
+          mipsle,
+          ppc64,
+          ppc64le,
+          riscv64,
+          s390x,
+        ]
         WHAT: ["only-libs", "with-golang"]
-        go-version: [ '1.19', '1.20', '1.21.x' ]
+        go-version: ["1.19", "1.20", "1.21.x", "1.22"]
         exclude:
         - WHAT: only-libs
           go-version: "1.20"
         - WHAT: only-libs
           go-version: "1.21.x"
+        - WHAT: only-libs
+          go-version: "1.22"
+        - WHAT: with-golang
+          go-version: "1.22"
+          ARCH: arm32v5
         - CC: gcc
           ARCH: arm32v5
         - CC: gcc
@@ -31,6 +52,22 @@ jobs:
           ARCH: mips
         - CC: gcc
           ARCH: mipsle
+        include:
+        - WHAT: with-golang
+          go-version: "1.22"
+          CC: clang
+          ARCH: arm32v5,hardfloat
+        - WHAT: with-golang
+          go-version: "1.22"
+          CC: clang
+          ARCH: arm32v6,softfloat
+        - WHAT: with-golang
+          go-version: "1.22"
+          CC: clang
+          ARCH: arm32v7,softfloat
+#        - WHAT: with-golang
+#          go-version: "1.23"
+#          ARCH: arm64v9
       fail-fast: false
     steps:
     - uses: actions/checkout@v4
