--- a/.github/workflows/docker-linux.yaml
+++ b/.github/workflows/docker-linux.yaml
@@ -42,7 +42,7 @@ jobs:
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
-    - name: amazonlinux: Install tar gzip
+    - name: Install tar gzip on amazonlinux
       if: startsWith(matrix.CONTAINER, 'amazonlinux:')
       run: dnf install -qy tar gzip
 
