--- a/.github/workflows/ubuntu-cross-compile.yaml
+++ b/.github/workflows/ubuntu-cross-compile.yaml
@@ -1,4 +1,4 @@
-name: Go cross compile
+name: Cross compile C libraries and golang modules
 
 on:
   push:
@@ -10,19 +10,36 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        CC: ["clang"]
+        CC: ["clang", "gcc"]
         ARCH: ["amd64", "arm32v5", "arm32v6", "arm32v7", "i386", "arm64", "mips64", "mips64le", "mips", "mipsle", "ppc64", "ppc64le", "riscv64", "s390x"]
+        WHAT: ["only-libs", "with-golang"]
         go-version: [ '1.19', '1.20', '1.21.x' ]
+        exclude:
+        - WHAT: only-libs
+          go-version: "1.20"
+        - WHAT: only-libs
+          go-version: "1.21.x"
+        - CC: gcc
+          ARCH: arm32v5
+        - CC: gcc
+          ARCH: arm32v6
+        - CC: gcc
+          ARCH: arm32v7
+        - CC: gcc
+          ARCH: i386
+        - CC: gcc
+          ARCH: mips
+        - CC: gcc
+          ARCH: mipsle
       fail-fast: false
     steps:
     - uses: actions/checkout@v4
 
     - name: Setup Go ${{ matrix.go-version }}
+      if: ${{ matrix.WHAT == 'with-golang' }}
       uses: actions/setup-go@v5
       with:
         go-version: ${{ matrix.go-version }}
-    - name: Display Go version
-      run: go version
 
     - name: Install Golang deps
       run: sudo ./misc/install-debian-go-deps-by-arch.sh ${{ matrix.ARCH }}
@@ -31,4 +48,6 @@ jobs:
       run: autoreconf -fi
 
     - name: Cross compile
-      run: ./misc/test-golang-cross.sh ${{ matrix.ARCH }}
+      env:
+        BUILD_LIB_WITH_GCC: ${{ matrix.CC == 'gcc' }}
+      run: misc/cross-compile.sh ${{ matrix.ARCH }} ${{ matrix.WHAT }}
