--- a/.github/workflows/docker-sanitizer.yaml
+++ b/.github/workflows/docker-sanitizer.yaml
@@ -73,7 +73,12 @@ jobs:
 
     - name: Show config.log
       if: failure()
+      run: |
+        sanitized_container="${{ matrix.CONTAINER//:/- }}"
+        echo "sanitized_container=$sanitized_container" >> $GITHUB_ENV
+    - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: config-log-${{ matrix.CONTAINER//:/- }}-${{ matrix.SANITIZER }}-${{ matrix.ASM }}
+        name: config-log-${{ env.sanitized_container }}-${{ matrix.SANITIZER }}-${{ matrix.ASM }}
         path: config.log
+
